--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,11 +12,13 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="icon" href="img/library.png" type="image/x-icon">
 </head>
+
 <body>
     <!-- Navigation bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Library Management</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -39,14 +42,16 @@
             </ul>
         </div>
     </nav>
-    
+
     <div class="container mt-5">
         <h1 class="text-center">Library Management</h1>
         <!-- Home section -->
         <div id="home">
             <div id="auth-content" class="mt-4 text-center">
                 <h2>Welcome to the Library</h2>
-                <p>Discover a world of knowledge and adventure through our extensive collection of books. Please login or sign in to explore further.</p>
+                <p>Explore an endless realm of knowledge and imagination with our vast collection of books. Please log
+                    in or register to dive into the adventure.
+                </p>
                 <button id="login-btn" class="btn btn-primary mr-2">Login</button>
                 <button id="register-btn" class="btn btn-secondary">Sign In</button>
             </div>
@@ -61,9 +66,13 @@
         <!-- About section -->
         <div id="about" class="mt-4" style="display:none;">
             <h2>About</h2>
-            <p>Welcome to our online library! We strive to provide you with access to a wide range of books and other materials to satisfy your reading and learning needs. Our goal is to create a convenient and accessible platform for all book lovers.</p>
-            <p>This library was created as part of a course at John Bryce School, serving as the first project in Library Management.</p>
-            <p>We hope our library becomes your favorite place to find and read books. Join us and discover the world of reading with our online library!</p>
+            <p>Welcome to our online library! We strive to provide you with access to a wide range of books and other
+                materials to satisfy your reading and learning needs. Our goal is to create a convenient and accessible
+                platform for all book lovers.</p>
+            <p>This library was created as part of a course at John Bryce School, serving as the first project in
+                Library Management.</p>
+            <p>We hope our library becomes your favorite place to find and read books. Join us and discover the world of
+                reading with our online library!</p>
         </div>
     </div>
     <!-- User Modal -->
@@ -80,4 +89,5 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
